# langchain-qa

./: .gitignore  main.py  pdm.toml  pyproject.toml  store.py
chains/: __init__.py  custom_embeddings.py  embeddings.py  vector_store.py
configs/: api_config.py  global_config.py
models/: chatglm_llm.py
scheme/: api.py
scripts/: fetch_files.py
text_splitter/: __init__.py  character_text_splitter.py  chinese_text_splitter.py  custom_text_splitter.py
utils/: utils.py
