[tool]
[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Robin.Wang", email = "3Jg$94sbQ@q1"},
]
dependencies = [
    "langchain>=0.0.154",
    "torch>=2.1.0.dev20230506",
    "torchvision>=0.16.0.dev20230506",
    "torchaudio>=2.1.0.dev20230506",
    "unstructured>=0.6.3",
    "pytesseract>=0.3.10",
    "sentence-transformers>=2.2.2",
    "faiss-cpu>=1.7.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
